# doc-automation-architecture

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: data_exploration.ipynb  data_preperation_A_internal_validation.ipynb  data_preperation_B_external_validation.ipynb  helper.py  statistical_evaluation_A_internal.ipynb  tokenizer.ipynb
notebooks/tables/: anova_h3_f1_exac.csv  f1_exact_summary.csv  f1_exact_summary.xlsx  f1_precision_recall_summary.csv  f1_precision_recall_summary.xlsx  precision_recall_summary.csv  precision_recall_summary.xlsx  time-to-completion_summary.csv  time-to-completion_summary.xlsx  tokens_summary.csv  tokens_summary.xlsx
results/: evaluation_20260616_181427_A_all.csv  evaluation_20260616_182311_A_all.csv  experiment_benchmark_A_all_20260618_173203.csv  experiment_benchmark_A_all_20260619_141957.csv  experiment_benchmark_A_all_20260622_173130.csv  experiment_benchmark_A_all_20260707_125733.csv  experiment_benchmark_A_all_20260708_144919.csv
scripts/: download_dataset_docile.sh  download_dataset_vrdu.sh  run_benchmark_experiment.sh  zip-data.sh
src/: data_loader.py  evaluation.py  main.py  schemas.py
src/architectures/: base.py  c1_rule_based.py  c2_singe_prompt.py  c2_single_prompt.py  c3_ai_agent.py  c4_multi_ai_agents.py
tests/: test_c1_rule_based.py  test_evaluation.py
