[project]
name = "doc-automation-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.11.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.5",
    "langgraph>=1.1.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
