[project]
name = "doc-automation-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dataclasses-json>=0.6.7",
    "en-core-web-lg",
    "faker>=40.11.0",
    "fuzzywuzzy>=0.18.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.9",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pdfreader>=0.1.15",
    "pillow>=12.1.1",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.14.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "transformers>=5.13.0",
    "wheel>=0.47.0",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }


[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
